k8s/prod/argocd/ingress-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd # Where your application is deployed
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "argo.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        # Use backendRefs for Gateway API v1beta1
        - name: argocd-server
          port: 80

#---
#apiVersion: traefik.io/v1alpha1
#kind: IngressRoute
#metadata:
#  name: argocd-server
#  namespace: argocd
#spec:
#  entryPoints:
#    - websecure
#  routes:
#    - kind: Rule
#      match: Host(`argo.kerrlab.app`)
#      priority: 10
#      services:
#        - name: argocd-server
#          port: 80
#    - kind: Rule
#      match: Host(`argo.kerrlab.app`) && Header(`Content-Type`, `application/grpc`)
#      priority: 11
#      services:
#        - name: argocd-server
#          port: 80
#          scheme: h2c
#  tls:
#    secretName: argo-app-tls
